ch2 practices