@@ -16,8 +16,8 @@ public class CountLongWords
 {
    public static void main(String[] args) throws IOException
    {
-      var contents = new String(Files.readAllBytes(
-         Paths.get("../gutenberg/alice30.txt")), StandardCharsets.UTF_8);
+      var contents = Files.readString(
+         Paths.get("../gutenberg/alice30.txt"));
       List<String> words = List.of(contents.split("\\PL+"));
 
       long count = 0;
